--- a/index.html
+++ b/index.html
@@ -60,26 +60,21 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rXmdebaDdj mbr-fullscreen mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rXmdebaDdj mbr-fullscreen mbr-parallax-background" id="header2-4">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+    <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(99, 201, 31);"></div>
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    FULL SCREEN INTRO
-                </h1>
+                    Ival8 Foods</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    Click any text to edit or style it. Select text to insert a link. Click blue "Gear" icon in the top right corner to hide/show buttons, text, title and change the block background. Click red "+" in the bottom right corner to add a new block. Use the top left menu to create new pages, sites and add themes.
-                </p>
-                <div class="mbr-section-btn">
-                    <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">LEARN MORE</a>
-                    <a class="btn btn-md btn-white-outline display-4" href="https://mobirise.co">LIVE DEMO</a>
-                </div>
+                    Ival8 foods is your one stop shop for household food items</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-success-outline display-4" href="https://mobirise.co">LEARN MORE</a>  <a class="btn btn-md btn-primary-outline display-4" href="https://mobirise.co">ORDER NOW</a></div>
             </div>
         </div>
     </div>
