create github pages

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tel:08096113779">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>
-                    +2348096113779 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></div>
+                    +2348096113779 &nbsp;</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rXmdebaDdj mbr-fullscreen mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-rXmdebaDdj mbr-fullscreen mbr-parallax-background" id="header2-4">
 
     
 
