--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="cid-rXmdebaDdj mbr-fullscreen mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="cid-rXmdebaDdj mbr-fullscreen mbr-parallax-background" id="header2-4">
 
     
 
@@ -106,7 +106,7 @@
                         </div>
 
                         <div class="card-text">
-                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">200+</h3>
+                            <h3 class="count pt-3 pb-3 mbr-fonts-style display-2">200</h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Household items</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
                                 Get over 200+ household items ready and available to you .
